# GMGC-mapper

./: .gitignore  ChangeLog  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: genome2gmgc_test.yml  gmgc_finder_test.yml  gmgc_mapper_test.yml
Docs/: index.md
docs/: index.md  install.md  output.md  usage.md  whatsnew.md
genome2gmgc/: BLOSUM.py  alignment.py  main.py
gmgc_finder/: alignment.py  main.py  output.md
gmgc_mapper/: alignment.py  main.py
gmgc_mapper/output_visualization/: index.ipynb
gmgc_mapper_plotter/: GMGC_Mapper_plotter.ipynb
src/: alignment.py  main.py  test.py
test/: test_alignment.py  test_split.py
