[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GMGC-mapper"
description = "Map genes and genome to the Global Microbial Gene Catalog (GMGC)"
readme = "README.md"
authors = [
  {name = "Shaojun Pan", email = "shaojun1997777@gmail.com"},
  {name = "Luis Pedro Coelho", email = "luis@luispedro.org"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Technically, numpy is not directly needed, but some downstream
    # dependencies use it and fail to declare they need it:
    "numpy",
    "scikit-bio",
    "tqdm",
    "pyyaml",
    "atomicwrites",
    "requests",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    ]


[project.urls]
Homepage = "https://github.com/BigDataBiology/GMGC-mapper"

[project.scripts]
gmgc-mapper = "gmgc_mapper.main:main"

[tool.setuptools]
packages = ["gmgc_mapper"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "gmgc_mapper.gmgc_mapper_version.__version__"}

[tool.setuptools.package-data]
gmgc_mapper = ["*.md"]
